# MXLabSlicer

./: .gitignore  Build.PL  CMakeLists.txt  MXLabSlicer.sublime-project  version.inc
.github/: ISSUE_TEMPLATE.md
cmake/modules/: FindGLEW.cmake
doc/: Dependencies.md  How to build - Linux et al.md  How to build - Mac OS.md  How to build - Windows.md  Localization_guide.md
resources/: resources
resources/icons/: MXLabSlicer.icns
resources/localization/: MXLabSlicer.pot
resources/localization/cs/: MXLabSlicer.mo  MXLabSlicer_cs.po
resources/localization/de/: MXLabSlicer.mo  MXLabSlicer_de.po
resources/localization/es/: MXLabSlicer.mo  MXLabSlicer_es.po
resources/localization/fr/: MXLabSlicer.mo  MXLabSlicer_fr.po
resources/localization/it/: MXLabSlicer.mo  MXLabSlicer_it.po
resources/localization/ja/: MXLabSlicer.mo  MXLabSlicer_ja.po
resources/localization/ko/: MXLabSlicer.mo  MXLabSlicer_ko_KR.po
resources/localization/pl/: MXLabSlicer.mo  MXLabSlicer_pl.po
resources/localization/pt_br/: MXLabSlicer.mo  MXLabSlicer_pt_br.po
resources/localization/tr/: MXLabSlicer.mo  MXLabSlicer_tr.po
resources/localization/uk/: MXLabSlicer.mo  MXLabSlicer_uk.po
resources/localization/zh_cn/: MXLabSlicer.mo  MXLabSlicer_zh_CN.po
resources/localization/zh_tw/: MXLabSlicer.mo  MXLabSlicer_zh_TW.po
resources/models/: mxlab_bed.stl  work table_1_label.stl  work table_2_음각.stl  work table_3_양각.stl
resources/profiles/: Creality.ini  MXLabResearch.ini
resources/profiles/MXLabSlicer/: MXLabSlicer.ini
resources/profiles/MXLabSlicer/cache/: MXLabResearch.idx
sandboxes/meshboolean/: CMakeLists.txt
src/: CMakeLists.txt  MXLabSlicer.cpp  MXLabSlicer_app_msvc.cpp
src/avrdude/: README  ac_cfg.h  arduino.c  avrdude-slic3r.conf  main.c  stk500.c  stk500v2.c  stk500v2_private.h  update.c
src/expat/: xmlparse.c
src/libslic3r/: Config.cpp  Config.hpp  ExtrusionEntity.hpp  Flow.cpp  Flow.hpp  GCode.cpp  GCode.hpp  GCodeTimeEstimator.cpp  GCodeWriter.cpp  GCodeWriter.hpp  Layer.cpp  Model.cpp  Model.hpp  PerimeterGenerator.cpp  Polyline.cpp  Polyline.hpp  Print.cpp  Print.hpp  PrintConfig.cpp  PrintConfig.hpp  PrintObject.cpp  PrintRegion.cpp  Slicing.cpp  SlicingAdaptive.cpp  Utils.hpp  utils.cpp
src/libslic3r/Fill/: Fill.cpp  FillBase.cpp  FillBase.hpp  FillConcentric.cpp  FillRectilinear2.cpp
src/libslic3r/Format/: 3mf.cpp  PRUS.cpp  PRUS.hpp  objparser.cpp
src/libslic3r/GCode/: Analyzer.cpp  Analyzer.hpp  PreviewData.cpp  PreviewData.hpp  ToolOrdering.cpp  ToolOrdering.hpp  WipeTower.cpp  WipeTower.hpp
src/libslic3r/SLA/: SLARasterWriter.cpp
src/platform/msw/: MXLabSlicer.rc.in
src/platform/osx/: Info.plist.in
src/qhull/: CMakeLists.txt  README.txt
src/slic3r/Config/: Version.hpp
src/slic3r/GUI/: 3DBed.cpp  3DBed.hpp  3DScene.cpp  3DScene.hpp  AboutDialog.cpp  AppConfig.cpp  BackgroundSlicingProcess.cpp  BedShapeDialog.cpp  ConfigManipulation.cpp  ConfigSnapshotDialog.cpp  ConfigWizard.cpp  ConfigWizard_private.hpp  Field.cpp  FirmwareDialog.cpp  GLCanvas3D.cpp  GLCanvas3D.hpp  GLCanvas3DManager.cpp  GUI.cpp  GUI_App.cpp  GUI_App.hpp  GUI_ObjectList.cpp  GUI_ObjectList.hpp  GUI_Preview.cpp  KBShortcutsDialog.cpp  MainFrame.cpp  MainFrame.hpp  MsgDialog.cpp  OptionsGroup.cpp  Plater.cpp  Plater.hpp  Preferences.cpp  Preset.cpp  PresetBundle.cpp  PresetBundle.hpp  PresetHints.cpp  RemovableDriveManager.cpp  SysInfoDialog.cpp  Tab.cpp  Tab.hpp  UpdateDialogs.cpp  (+2 more)
src/slic3r/Utils/: OctoPrint.cpp  PresetUpdater.cpp  Serial.cpp
t/: custom_gcode.t  multi.t
tests/cpp17/: main.cpp
tests/libnest2d/: libnest2d_tests_main.cpp
tests/sla_print/: sla_print_tests.cpp
